# json-normalize

./: LICENSE  Makefile  README.md  dev-packages.txt  dev-requirements.txt  pytest.ini  release-notes.md  setup.cfg  setup.py
.github/workflows/: python-publish.yml  test.yml
src/json_normalize/: __init__.py  key_joiners.py  main.py
tests/: test_combine_lists.py  test_drop_nodes.py  test_freeze_nodes.py  test_general_functionality.py  test_key_joiner.py  test_other_input_types.py
