[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100

[metadata]
name = json-normalize
version = attr: json-normalize.__version__
author = The Funnel Dev Team
author_email = open-source@funnel.io
description = Recursively flattens a JSON-like structure into a list of flat dicts.
classifiers =
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Software Development :: Libraries
keywords = JSON
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
requires_python = ~=3.7
project_urls =
  Bug Reports = https://github.com/funnel-io/json-normalize/issues
  Source = https://github.com/funnel-io/json-normalize
url = https://github.com/funnel-io/json-normalize

[options]
package_dir =
  =src
packages=find:

[options.packages.find]
where = src
